@@ -1,3 +1,8 @@
+2008-04-29  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gammainv.c (gsl_cdf_gamma_Pinv, gsl_cdf_gamma_Qinv): restrict
+	the range of the gaussian approximation
+
 2008-02-20  Brian Gough  <bjg@network-theory.co.uk>
 
 	* beta_inc.c (beta_inc_AXPY): add some handling for large
